--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <h2 style="font-family: 'Exo';color: #ffffff;">NOAH LYLES</h2>
                         <h3 style="font-family: 'Exo';color: #525252">On Solana</h3>
                         <p style="font-family: 'Exo ';">
-                            With the $BLUEYES token, users can quickly and securely make transfers, invest, trade and participate in decentralized financial applications. 
+                            Noah Lyles made headlines at the Olympic Trials not only for his performance but also for his unique celebration, pulling out a Blue Eyes White Dragon card. To commemorate this iconic moment, we're launching a limited-edition token on Solana. Join us in celebrating athletic excellence and pop culture with this exclusive digital collectible. Stay tuned for more details on how you can own a piece of history!
                             </p><h1 style="font-size: large;"> Don’t you know, NOAH LYLES… you got to $BLUEYES! </h1>
                             
 
