--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
                                 </a>
                             </li>
                             <li class="buy-token">
-                                <a class="readon black-shape" href="index.html#" style="background-color: #bf401d;;border-radius: 10px;border: solid white 2px;">
+                                <a class="readon black-shape" href="index.html#" style="background-color: #2152ff;;border-radius: 10px;border: solid white 2px;">
                                         <span class="btn-text" style="font-size: 1rem;color: #ffffff;font-weight: 900">$BLUEYES</span>
                                         <span class="hover-shape1"></span>
                                         <span class="hover-shape2"></span>
                                         <span class="hover-shape3"></span>
                                     </a>
                                 <ul>
-                                    <li><a href="buylink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #bf401d;">Raydium</a></li>
-                                    <li><a href="chartlink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #bf401d;">Dexscreener</a></li>
-                                    <li><a href="tglink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #bf401d;">Telegram</a></li>
-                                    <li><a href="ttlink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #bf401d;">Twitter</a></li>
+                                    <li><a href="buylink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #2152ff;">Raydium</a></li>
+                                    <li><a href="chartlink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #2152ff;">Dexscreener</a></li>
+                                    <li><a href="tglink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #2152ff;">Telegram</a></li>
+                                    <li><a href="ttlink" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #2152ff;">Twitter</a></li>
 
                                 </ul>
                             </li>
@@ -167,7 +167,7 @@
             <ul class="nav-menu">
                 <li><a href="index.html#about" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #000000;">ABOUT</a></li>
                 <li><a href="index.html#roadmap" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #000000;">ROADMAP</a></li>
-                <li><a href="" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #525252;">SOCIALS</a></li>
+                <li><a href="#social" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #525252;">SOCIALS</a></li>
 
                 <li><a href="" target="_blank" style="font-family: 'poppins', sans-serif;font-size: 1rem;color: #525252;">CHART</a></li>
             </ul>
@@ -204,7 +204,7 @@
                 <div class="description wow fadeInUp pt-0" data-wow-delay="300ms" data-wow-duration="2500ms" style="visibility: visible; animation-duration: 2500ms; animation-delay: 300ms; animation-name: fadeInUp;">
 
                 </div>
-                <a class="banner-btn fadeInUp black-shape-big" data-wow-delay="300ms" data-wow-duration="2500ms" href="buylink" target="" style="background-color: #e85b097a;transform: translateY(-50px);border-radius: 10px;width:auto;">
+                <a class="banner-btn fadeInUp black-shape-big" data-wow-delay="300ms" data-wow-duration="2500ms" href="buylink" target="" style="background-color: #2152ff;transform: translateY(-50px);border-radius: 10px;width:auto;">
                         <span href="tglink" target="tglink" style="font-weight: bolder;color:#ffffff;font-family: 'Exo 2';font-weight: 900;font-style: oblique;margin-top: 20px">BUY $BLUEYES</span>
                         <span class="hover-shape1"></span>
                         <span class="hover-shape2"></span>
